# TASK-req_386610320047

./: metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  (+1 more)
docs/: api-spec.md  design.md  (+1 more)
repo/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  diesel.toml  docker-compose.yml  init_db.sh  run_tests.sh
repo/migrations/2024-01-01-000001_initial_schema/: down.sql  up.sql
repo/migrations/2024-01-02-000001_add_updated_at/: down.sql  up.sql
repo/migrations/2024-01-03-000001_add_events_updated_at/: down.sql  up.sql
repo/migrations/2024-01-04-000001_search_vector_tags/: down.sql  up.sql
repo/scripts/: bootstrap.sh  entrypoint.sh  test_entrypoint.sh
repo/src/: alerts.rs  audit.rs  config.rs  crypto.rs  db_instrumentation.rs  errors.rs  lib.rs  logging.rs  main.rs  models.rs  schema.rs
repo/src/api/: mod.rs
repo/src/api/dto/: mod.rs
repo/src/api/handlers/: analytics.rs  auth.rs  channels.rs  events.rs  exports.rs  feature_flags.rs  health.rs  imports.rs  items.rs  metrics.rs  mod.rs  ops.rs  schema_mappings.rs  search.rs  standardization.rs  tags.rs  templates.rs  users.rs
repo/src/api/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
repo/src/import_export/: mod.rs
repo/src/jobs/: scheduler.rs
repo/src/search/: mod.rs
repo/src/services/: analytics.rs  auth.rs  channels.rs  exports.rs  feature_flags.rs  imports.rs  items.rs  mod.rs  search.rs  tags.rs  templates.rs  users.rs
repo/src/standardization/: mod.rs
repo/tests/: api_integration_tests.sh  unit_tests.rs
