[package]
name = "knowledgeops"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
diesel_migrations = "2.2"
r2d2 = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
regex = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.82"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }
tempfile = "3"
